welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: ';' expected but 'return' found.
     if (num(i)<(num(i+1))) {level = level + 1} } return level } 
                                                  ^